# Awal-terminal

./: README.md  justfile
.githooks/: commit-msg  install.sh  pre-commit  pre-push
.kiro/skills/ai-analyzer-architecture/: SKILL.md
.kiro/skills/build-and-release/: SKILL.md
.kiro/skills/commit-conventions/: SKILL.md
.kiro/skills/dev-workflow/: SKILL.md
.kiro/skills/ffi-bridge/: SKILL.md
.kiro/skills/review-rust-patterns/: SKILL.md
.kiro/skills/review-swift-patterns/: SKILL.md
.kiro/skills/rust-core/: SKILL.md
.kiro/skills/swift-ui/: SKILL.md
.kiro/steering/: acp-protocol-spec.md  app-architecture.md  kiro-cli-integration.md
app/Sources/AwalTerminalLib/App/: ACPClient.swift  ACPTerminalManager.swift  AIComponentInjector.swift  AgentChangesTracker.swift  AgentStore.swift  AppConfig.swift  ClaudeTerminalApp.swift  HookApprovalStore.swift  McpApprovalStore.swift  ModelCatalog.swift  RegistryManager.swift  SessionExporter.swift  SessionManager.swift  StealthRedactor.swift  SubagentState.swift  TokenTracker.swift  ToolCallState.swift  UpdateChecker.swift  WindowStateStore.swift
app/Sources/AwalTerminalLib/Terminal/: ChatInputView.swift  TerminalView+CopyPaste.swift  (+4 more)
app/Tests/AwalTerminalTests/: AppConfigTests.swift  HookApprovalStoreTests.swift  ModelCatalogTests.swift  TokenTrackerTests.swift
core/: Cargo.toml
core/include/: awalterminal.h
core/src/: ffi.rs  lib.rs
core/src/acp/: client.rs  diff.rs  mod.rs  protocol.rs  reader.rs
core/src/io/: pty.rs
core/src/terminal/: ai_analyzer.rs  parser.rs  screen.rs
docs/: documentation.html
(+17 files in other folders)
